test: add comprehensive unit tests for Core SDK
- Add 59 unit tests covering all 5 core classes
- CryptoService: encryption/decryption, SHA-256 hashing
- SessionGuardian: idle detection, event emission, timers
- DeviceFingerprinter: data collection, fingerprint comparison
- SecureStorage: encrypted storage operations
- TelemetryReporter: incident reporting, retry logic
- Configure Vitest with happy-dom for Web Crypto API support

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -46,6 +46,9 @@
         "url": "https://github.com/nis2shield/frontend/issues"
     },
     "devDependencies": {
+        "@vitest/coverage-v8": "^1.6.1",
+        "happy-dom": "^20.0.11",
+        "jsdom": "^27.4.0",
         "tsup": "^8.0.0",
         "typescript": "^5.3.0",
         "vitest": "^1.0.0"
