--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,9 @@ name: Publish to npm
 on:
   release:
     types: [published]
+  push:
+    tags:
+      - 'v*'
   workflow_dispatch:
     inputs:
       dry_run:
@@ -53,21 +56,21 @@ jobs:
       
       # Publish all packages
       - name: Publish @nis2shield/core
-        if: ${{ github.event.inputs.dry_run != 'true' }}
+        if: github.event_name == 'release' || startsWith(github.ref, 'refs/tags/') || github.event.inputs.dry_run != 'true'
         run: npm publish --access public --provenance -w @nis2shield/core
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         continue-on-error: true
       
       - name: Publish @nis2shield/react-guard
-        if: ${{ github.event.inputs.dry_run != 'true' }}
+        if: github.event_name == 'release' || startsWith(github.ref, 'refs/tags/') || github.event.inputs.dry_run != 'true'
         run: npm publish --access public --provenance -w @nis2shield/react-guard
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         continue-on-error: true
       
       - name: Publish @nis2shield/angular-guard
-        if: ${{ github.event.inputs.dry_run != 'true' }}
+        if: github.event_name == 'release' || startsWith(github.ref, 'refs/tags/') || github.event.inputs.dry_run != 'true'
         working-directory: dist/angular-guard
         run: npm publish --access public --provenance
         env:
@@ -75,7 +78,7 @@ jobs:
         continue-on-error: true
       
       - name: Publish @nis2shield/vue-guard
-        if: ${{ github.event.inputs.dry_run != 'true' }}
+        if: github.event_name == 'release' || startsWith(github.ref, 'refs/tags/') || github.event.inputs.dry_run != 'true'
         run: npm publish --access public --provenance -w @nis2shield/vue-guard
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
