--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "nis2shield-frontend-monorepo",
     "version": "1.0.0",
     "private": true,
-    "description": "NIS2 Shield Frontend Ecosystem - Core SDK + Framework Wrappers",
+    "description": "NIS2 Shield Frontend Ecosystem - Core SDK + React / Angular / Vue Wrappers for Client-Side Security",
     "workspaces": [
         "packages/*"
     ],
